--- a/css/options.css
+++ b/css/options.css
@@ -22,6 +22,10 @@
    margin-top: 5px;
  }
 
+ input.ui-slider-input{
+   min-width: 50px;
+ }
+
  #db-table th, #db-table td {
    text-align: center;
  }
